@@ -1,4 +1,5 @@
 * chroust: verify conditions
+* schedule hint/solutions according to start_time instead of current time on start
 
 rel 20.4.2
 * delete session on logout
